Use `SequencedCollection` methods